--- a/report/report.tex
+++ b/report/report.tex
@@ -26,6 +26,16 @@ Definition of associative memory.
 
 Distinction between auto-associative and hetero-associative memory.
 
+%\subsection{Hebbian Learning}
+
+% ref: http://www.scholarpedia.org/article/Models_of_synaptic_plasticity
+%
+% (Hebb, 1949). The plasticity rule proposed by Hebb postulates that when one neuron drives the activity of another neuron, the connection between these neurons is potentiated.
+%
+% Theoretical analysis indicates that not only Hebbian like synaptic potentiation is necessary but also depression between two neurons that are not sufficiently coactive (Stent, 1973, Sejnowski 1977) Depression is necessary for several reasons, among them to prevent all synapses from saturating to their maximal values and thereby loosing their selectivity, and to prevent a positive feedback loop between network activity and synaptic weights.
+%
+% Phenomenological models are characterized by treating the process governing synaptic plasticity as a black box. The black box takes in as input a set of variables, and produces as output a change in synaptic efficacy. No explicit modeling of the biochemistry and physiology leading to synaptic plasticity is implemented.
+
 % === [ Models of Associative Memory ] =========================================
 
 \section{Models of Associative Memory}
@@ -123,6 +133,35 @@ TODO: Extend. Artificial synapses experiment using memsistors conducted in 2010,
 
 TODO: Extend. The memsistor was hyphosized in 1972 by Leon Chua, the father of non-linear curcuit theory, who presented it as the missing fundamental cirtuit element (see figure \ref{fig:circuit_elements}) \cite{chua_memristor}. Looking at the current~$I$ and voltage~$V$ plot, a memsistor may be identified by the pinched hysteresis loop going through origo (see figure \ref{fig:pinched_hysteresis}. TODO: Explain the underlying reason of the hysteresis loop, i.e. alterating between two states (metastable switch).
 
+% ref: Finding the Missing Memristor - R. Stanley Williams
+%
+% > The fourth fundamental passive circuit element.
+% >
+% > Resistor
+% > Capacitor
+% > Inductor
+% >
+% > AND Memristor
+% >
+% > UC Bercley Lean Chua is to circuit theory what Albert Einstein is to relativity.
+% > The father of non-linear cirtuit theory.
+% >
+% > Noticed something missing from the circuit diagram; based on symmetry and beauty, there should be a fourth.
+% > Original paper, memsitory the missing circuit element. 1971
+% >
+% > Passive device with state.
+% >
+% > Frequency response of Lissajous figures.
+% > The pinched hysteresis loop.
+% >
+% > "If you see a pinced hysteresis loop in an IV-curve, you've probably got a memristor."
+% >
+% > Make a circuit using only resistors, capacitors and inductors to come up with the IV-characteristics of a memristor. It cannot be done, and thus belongs to it as a fundamental device; as proven by Lean Chua.
+% >
+% > Even before the original paper in 1971, there was peer-review research published which illustrated pinched hysteresis loop. Basically they had managed to discover the memristor, they just didn't know what it was called and thought it was an abnomality.
+% >
+% > Strukov, Stewart, Snider & Williams, Nature 453 80 (2008)
+
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.5\textwidth]{inc/circuit_elements.png}
@@ -142,6 +181,244 @@ TODO: Extend. The memsistor was hyphosized in 1972 by Leon Chua, the father of n
 \footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Pinched_crossing_hysteresis.png}}
 
 TODO: Extend. In 2008, HP released a paper titled \textit{The missing memristor found}, which outlined the hardware implementation of a memsistor \cite{hp_memristor_found}, thus validating the existence of the hypothesized memsistors circuit element. Retrospectively, several research groups had discovered circuits with the tell-tale properties of memsistor, i.e. with a pinched hysteresis loop. TODO: Include ref about prior research, before 2008.
+
+% ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
+%
+% The resistance of a memristor depends on the history of current that has previously flowed through the device.
+%
+% Search for "memristor" on Google scholar has been doubling every 18-24 months since 2008.
+%
+% Down to 50 Angstroms device size theoretically possible.
+%
+% Denser memory, faster read and write, lower energy use, non-volitile, and may represent continuous (i.e. not 0 and 1).
+%
+% How do we reach the power efficiency of a brain. "Don't simulate a brain, build a brain"
+%
+% We need to build a brain where the distance between memory and computation is 0.
+%
+% 1 billion fold discipancy between current machine learning platforms and biological brains.
+%
+% We can operate on very low voltages because of the read and write phases that constantly repair relevant state.
+
+% ref: Knowm Collaborates with Kris Campbell at BSU
+%
+% Continous value stored as resistance in a memristor. breaking outside of the 0 and 1 box.
+
+% ref: http://knowm.org/
+%
+% > ## Modern computing
+% >
+% > Clear distinction between memory and processing.
+% > Shuttle information back and forth.
+% > Takes too long, requires too much energy.
+% >
+% > ## New paradigm of computing
+% >
+% > The act of accessing memory is the act of processing.
+
+% ref: https://www.youtube.com/watch?v=Tb2E-t11OH4 ("What is AHaH Computing?")
+%
+% > Large scale adaptive learning systems, like brains.
+% >
+% > Bring memory and processing closer together. Parallel computing.
+% >
+% > Reduce or eliminate the energy normally associated with computing those functions.
+
+% ref: https://www.youtube.com/watch?v=IVDRcV8XvlI ("What is an AHaH node?")
+%
+% > Two memristors competing with each other.
+% >
+% > A kT-bit (thermodynamic bit), a synapse consisting of two memristors.
+% >
+% > Look at the leaf of a plant. Energy dissipating system, constructed of many bifircating channels. Every place where the energy flow splits, you have an AHaH node. You have two competing energy dissipating pathways.
+% >
+% > Nature is built of AHaH nodes.
+% >
+% > Understand how things self-organize.
+
+% ref: https://www.youtube.com/watch?v=R7HxFhVQVr4 ("Why AHaH computing?")
+%
+% > Current digital computing platforms are billions of times less power and space efficient than biology (brains) for synaptic operations.
+% >
+% > It's physically not possible to reach biological level efficiency without significant changes in both architecutre and technology.
+% >
+% > "GPU's will save us." `No they won't, they just suck less`
+% >
+% > If you insist on separating memory and computing, you won't even get close to the capacity of biology.
+% >
+% > Traditional computing would go an inch while biology is able to circle the world.
+% >
+% > Effective intelligence.
+
+% ref: https://www.youtube.com/watch?v=YOKr8n6Juhs ("Why is AHaH computing so efficient?")
+%
+% > Communication is way faster in technology than biology. 1sec football field, 1sec 7 times around the world.
+% >
+% > Neuron body: 4000-100 000nm
+% > Synapses: 500 nm
+% > Viruses: 400-40 nm
+% > Transistor: 28 nm
+% >
+% > If faster and smaller, why so inefficient?
+% >
+% > Currents naturally sum. The values are reduced to specific resistances.
+% >
+% > Memristor
+% >
+% > Measures the combined current.
+% >
+% > Memristors can radically reduce total communication distance for some problems (not all).
+% >
+% > Reduce voltage makes a big impact, since it's the voltage squared.
+% >
+% > E=(C*V^2)/2
+% >
+% > biology: 0.065V
+% > computer: 1.2v (18x biology) 18^2 -> 324.
+% >
+% > Reduce the communication distance and voltage.
+
+% ref: https://www.youtube.com/watch?v=ZBJX6zzwnRI ("The Adaptive power problem.")
+%
+% > Noise is everywhere.
+% >
+% > Noise margin (analog vs digital).
+% >
+% > The signal gets corrupted by the noise.
+% >
+% > Memristors. Two meta-stable switches. Potential energy that has to be overcome to have a transition.
+% >
+% > We want: Low power + adaptation ("ability to change")
+% > But: Parts will constantly break (because of noise), decay, volitility
+% > Consequently: We need a mechanism of repair.
+% >
+% > The Adaptive Power Problem
+% > Low Power + Adaptation = Parts break
+% >
+% > Intelligence -> Learning -> Adaptation
+
+% ref: https://www.youtube.com/watch?v=NO9kmqr8NLk ("The Adaptive Power Solution")
+%
+% > Intrinsic mechanism of repair; inherent.
+% >
+% > What if constant adaptation *is* the mechanism of repair?
+% >
+% > What is the "essential nature" of adaptation?
+% >
+% > When nature minimizes its potential energy, it also solves our problem."; e.g. minimal surface with soap bubbles.
+% >
+% > To repair yourself is to be alive. Death is decay.
+% >
+% > Bejan (Construcal Law):
+% > "For a finite-size system to persist in time (to live), it must evolve in such a way that it provides easier access to the imposed currents that flow through it."
+% >
+% > Swenson:
+% > "A system will select the path or assembly of paths out of available paths that minimizes the potential or maximizes the entropy at the fastest rate given the constraints."
+% >
+% > England:
+% > "Dissipation-driven adaptation of matter."
+% >
+% > E.g. The system will go with the flow, and it will maximize the flow.
+% >
+% > Maximize the dissipatation of energy. The system will evolve in time towards that maximum, intrinsic repair.
+% >
+% > Have the system evolve itself to solve our problems.
+% >
+% > AHaH circuit. An intrinsic adaptation mechanism. Energy dissipation pathways competing for conduction resources.
+% >
+% > Everywhere in nature. Competing energy dissipating pathways. Fractal.
+% >
+% > A memristor is effectively an adaptive energy dissipating pathway. It's like a riverbed. As you pass current through it, it will change its resistance, the riverbed will get bigger. Make memristors compete for energy dissipation.
+% >
+% > AHaH - Anti-Hebbian and Hebbian plasticity
+% >
+% > "Maximization of energy dissipation" - Swenson
+% > "Maximization of currents" - Bejan
+% > "Dissipation-driven adapataion of matter" - England
+% > "Energy dissipation pathways competing for condution resources" as a mechanism.
+
+% ref: https://www.youtube.com/watch?v=CFSrC7kjbJo ("Introduction to AHaH Computing, Alex Nugent, RIT, April 2015")
+%
+% > Focuses on self-organizational building blocks.
+% >
+% > Points of bifercation, branches.
+% >
+% > Energy dissipating fractal pattern.
+% >
+% > d (the distance) is zero in the brain, has tremendous effects on energy usage.
+% >
+% > "If it's pinched it's a memristor"
+% > - Leon Chua
+% >
+% > Plot voltage vs current. You get this pinched hisorises loop. Implies that the device has a memory. If it was just a resistor it would be a line. If it was a capacitor it would be a circle.
+% >
+% > Tell tale sign that it is a memristor.
+% >
+% > A memristor for each pathway, and they are competing with eachother so you need two per synapse. Think of the pair as a synapse itself, and the different in conductance between the two is the value of the synapse. If one is more conductive than the other it is positive, and vise versa, its negative.
+% >
+% > Naturally they go towards zero. But if you give them a burst, you can make them positive or negative as you want. Read brings it a little closer together, then reward it.
+% >
+% > Hebbian (erase the path): Any modification to the synaptic weight that reduces the probability the synapic state will remain upon subsequent measurement.
+% >
+% > Anti-hebbian (select the path): Any modification to the synaptic weight that increases the probability the synaptic state will remain the same upon subsequent measurement.
+% >
+% > XXX [ IMPORTANT ] XXX
+% >
+% > Synaptic access is processing is adaptation (memory and processing merged, d=0).
+% >
+% > XXX [/ IMPROTANT ] XXX
+% >
+% > A neuron is this decision making thing. We are finding the decision boundry, a representation of the weights w_0, w_1.
+% >
+% > Maximize the classification margin.
+% >
+% > Opposing data distribution (energy dissipation pathways)
+% > fight for classification margin (compete for conduction resources)
+% >
+% > Spike encoding (optic nerve). Which spikes within the spike space are active.
+% >
+% > FF-RF (forward-float, reverse-float), that is the as close to non-destructive read as you get. Reading is adaptation, it changes the memory.
+% >
+% > We can go backwards, discretized by the spikes.
+% >
+% > Nature has a universal adaptive building block.
+% >
+% > Interacting collectives of this builing block solves the problems that the brain solves.
+% >
+% > memristors empower (not replace) our digital computers.
+
+% ref: https://youtu.be/dgbooumJ4Tg?t=1692
+%
+% Won a nobel price. Eliol Prigoge.
+% There is a natural tendency for complex systems to minimize the energy consumption
+
+\subsubsection{Knowm}
+
+% ref: http://knowm.org/knowm/
+%
+% A memristor is the electronic equivalent of an adaptive container!
+%
+% “Anti-Hebbian and Hebbian” in honor of Donald O. Hebb
+%
+% “Knowm’s Synapse” or “Nature’s Transistor”. Two competing energy dissipation pathways.
+%
+% As a voltage (pressure) is applied to a memristor, its conductance will change.
+%
+% It is responsible for most self-organization on this planet. Nature is built of Knowms, including you.
+%
+% It is created when two energy dissipation pathways are competing for conduction resources. It appears to be at the heart of most self-organization.
+%
+% Knowm is built of a simple part repeated over and over again.
+%
+% When energy (for example water) flows through an adaptive container (for example dirt), the medium adapts or erodes in a particularly way that causes the energy to be dissipated faster. For example, the water erodes the ground and causes a channel to grow, which lowers the resistance to flow.
+%
+% ref: http://knowm.org/knowm-api/
+%
+% Every modern computing system currently separates memory and processing. This works well for many tasks, but it fails for large-scale adaptive systems like brains or large ML models like neural networks. Indeed, there is no system in Nature outside of modern human digital computers that actually separates memory and processing, so it’s a wonder we have been able to do as much as we have.
+
+% ref: ref: http://knowm.org/report-from-the-navy-karles-invitational-on-neuro-electronics/
+%
+% Where each operation results in Anti-Hebbian or Hebbian learning. At the lowest level, Anti-Hebbian just means “move the synapse toward zero” and Hebbian means “move it away from zero”.
 
 % === [ Current Capabilities ] =================================================
 
@@ -197,13 +474,45 @@ The general idea when using RBM's in deep learning is to "stack" several RBM's o
 
 Proof of concept in 2010, using 3 neurons and 2 synapses to achieve 1 associative memory formation.
 
+%ref: http://www.hpl.hp.com/news/2008/apr-jun/memristor.html
+%
+% > "The memristor could lead to far more energy-efficient computers with some of the pattern-matching abilities of the human brain.
+% > - Jamie Beckett, April 2008
+
 % === [ Future Potential ] =====================================================
 
 \section{Future Potential}
 
+% ref: Connectome.
+%
+% 100 000 000 000 neurons
+%
+% 10 000 more synaptic connections
+
+% ref: https://www.youtube.com/watch?v=JqMpGrM5ECo (The Human Brain Project - Video Overview)
+%
+%     100 000 000 000 neurons
+% 100 000 000 000 000 synapses
+
+
 \subsection{Intelligent Systems}
 
 Intelligence defined by ability to make predictions, not behaviour \cite{intelligence_is_prediction}.
+
+% ref: http://knowm.org/the-constraints-for-neuromorphic-computing-systems-have-suddenly-changed/
+%
+% In almost every machine learning algorithm or program, there lies an equation that looks something like this:
+%
+% w_{t+1}=w_{t}+\delta w
+%
+% In other words, the weight is nudged a bit. Sometimes it’s nudged in a positive direction. Sometimes it’s nudged in a negative direction. Sometimes it’s a big nudge. Sometimes it’s a small nudge. Most of machine learning boils down to understanding how to nudge weights around.
+%
+% The space of possible memristors is enormous and most of them don’t work exactly how we want them too. Some are too stochastic (random). Some do not switch quickly enough, or they switch too fast. Some are not bi-directional (meaning that we can’t controllably increase and decrease the resistance via the applied voltage direction). Many memristors are not incremental, meaning that their resistance can only be changed in large steps. Others are only incremental in one direction and will abruptly change in the other direction. Still others will stop working after only a few thousand switching events. Indeed, when one stops theorizing and goes out to find a suitable memristor–things get very difficult very quickly!
+%
+% `It now seems clear that a capacity to learn would be an integral feature of the core design of a system intended to attain general intelligence, not something something to be tacked on later as an extension or an afterthought`
+% - Nick Bostrom, “Superintelligence: Paths, Dangers, Strategies”
+%
+% Artificial General Intelligence.
 
 \subsection{Energy Efficiency}
 
@@ -214,6 +523,94 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %Current computer architectures are designed around major bottlenecks, huge amounts of data has to be shuffled back and forth to perform computations. Reaching its limits; transistors now so small that they only allow a single electron to pass through (similar in size to the ion channels). At this scale, problems arise when transistors may allow electrons to pass through, when they shouldn't and wise versa; which leads to unpredictable behaviour (small bursts of ones when should be be all zero, and wise versa.)
 
 %The brain, parallel, error correcting, memory efficient. (not doing a lot of unnecessary data shuffling?)
+
+% ref: From BrainScales to Human Brain Project Neuromorphic Computing Coming of Age
+%
+% Human Brain Project.
+%
+% 50 000 000 synapses, and about 200 000 neurons
+%
+% 10 000 faster than biological real-time.
+%
+% Performance.
+%
+% 10 femtojoul
+%
+% 1 joul (in super computers) 10^14
+%
+% Physical models (neuromorphic)
+%
+% 10 000 000 times more energy efficient than the state-of-the-art HPC (comparable model)
+%
+% 10 000 less energy efficient than biology.
+%
+% Including all the overheads.
+%
+% # Time Scales
+%
+% Causality detection   | 10^{-4} sec | 0.1 sec          | 10^{-8} sec |
+% Synaptic plasticity   | 1 sec       | 1000 sec         | 10^{-4} sec |
+% Learning              | 1 day       | 1000 day         | 10 sec      |
+% Development           | 1 year      | 1000 year        | 3000 sec    |
+%
+% 12 orders of magnitude
+%
+% Evolution             | > millenia  | > 1000 millenia  | > months    |
+%
+% > 15 orders of magnitude
+
+%# Applications
+%
+% Reverse engineer biological data
+
+% ref: Schmuker, Michael, Thomas Pfeil, and Martin Paul Nawrot. "A neuromorphic network for generic multivariate data classification."
+%
+% TODO: Check :) HBP Roadmap for 2023
+%
+% Spikey (Heidelberg Lab), commercially available.
+% 384 neurons
+% 100 000 plastic synapses
+% 10.000 - 100.000 real-time
+% put and pray into Laptop with USB.
+%
+% Neuromorphic computing
+% Consistent concept for non-von Neumann, non-Turing computer architecture.
+%
+% Watch the market for Resistor memory, once it is there they will use it for HBP, but using CMOS for now, similar to how von-Neumann used Vaccum tubes before the arrival of the transistor.
+
+% ref: http://knowm.org/how-to-build-the-ex-machina-wetware/
+%
+% Once you understand what is going on, you can start to understand how to harness it. Think about it. If a bunch of particles will spontaneously organize themselves out of a colloidal suspension to dissipate energy then what happens when we control the energy? What happens if we make the maximal-energy-dissipation solution the solution to our problem? Will the particles self-organize to solve our problem? The answer, it turns out, is a resounding “yes”.
+%
+% Find a way to use nature as nature itself does. To not compute a brain, but to actually build one. To find a way for matter to self-organize on a chip to solve computational problems.
+%
+% Memory and processing merge, voltages and clock-rates drop and power efficiencies explode.
+%
+% AHaH Computing is about understanding how to build circuits that adapt or learn to solve your problems and, as a result, dissipate more energy ‘as a reward’. The path to maximal energy dissipation is the path that solves your problem, and the result is that Nature self-organizes to solve your problem.
+
+% ref: http://knowm.org/the-gordon-panthana-dialog/
+%
+% It of course does not mean you can magically make a circuit that consumes zero energy. It means that calculation of very large numbers of interacting adaptive variables via the separation of memory and processing is overwhelming less efficient than building a very large interacting adaptive system directly. The example was meant to show just how significant this contribution can be, and why having an intrinsically adaptive element (the memristor) is exciting and useful.
+%
+% Specifically we use the physics of memristors to eliminate the power and time normally associated with synaptic integration and adaptation.
+%
+% AHaH Computing embraces hardware as part of the solution and designs from the bottom-up (hardware) and top-down (AHaH compatible algorithms). The result is a broadly commercially viable machine learning system that can scale to biological levels of efficiency.
+
+% ref: http://knowm.org/report-from-the-navy-karles-invitational-on-neuro-electronics/
+%
+% Dr. Kwabena Boahen
+%
+% Comparing the scaling problem of CMOS transistors to traffic. He showed that as CMOS transistors are scaled down, and the number of electron ‘lanes’ get close to one, the devices exhibit extremely high magnitude noise due to individual electrons becoming trapped in local energy minima (pot holes) and blocking the traffic. In essence, when the transistors are large, any “stuck electrons” are easily bypassed and their contribution to the total current is minimal. However, when the devices approach the natural ‘lane width’ of an electron (about 2.7 nm if a remember correctly), a stuck electron could reduce the current by 50% or even shut down the whole device. The answer to these problems, Dr. Boahen believes (and I agree), lie in distributed fault-tolerant analog architectures inspired by the brain.
+
+\subsection{Independent Component Analysis}
+
+% ref: http://knowm.org/report-from-the-navy-karles-invitational-on-neuro-electronics/
+%
+% Dr. Marcel Adam Just
+%
+% For example, when somebody thinks about an “orange”, for example, their brains activate representations for a color, and a shape, and a fruit, and other associations. By identifying these “thought components” and using machine learning, they can predict with high accuracy what object the person is thinking about. They have gone further with this, decomposing human emotion into a “basis set” of three components that they call “Valence” (is it good or bad), “Arousal” and “Social Interaction”.
+%
+% What really surprises me is that the exact same places of a brain are active for the same abstract concepts from one person to the next. That is, when I think of an “orange” and parts of my cortex light up corresponding to shape, color, texture, etc…the exact same places in your brain light up to represent the same abstract concepts! It would appear that while the human brain must learn these concepts, the location for where the learning occurs is genetically determined.
 
 % === [ Conclusion ] ===========================================================
 
