--- a/report/report.tex
+++ b/report/report.tex
@@ -20,11 +20,7 @@
 
 \section{Introduction}
 
-\subsection{Associative Memory}
-
-Definition of associative memory.
-
-Distinction between auto-associative and hetero-associative memory.
+Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind (e.g. \textit{``If I say elephant, you say pink.''}).
 
 %\subsection{Hebbian Learning}
 
@@ -392,7 +388,7 @@ TODO: Extend. In 2008, HP released a paper titled \textit{The missing memristor 
 % Won a nobel price. Eliol Prigoge.
 % There is a natural tendency for complex systems to minimize the energy consumption
 
-\subsubsection{Knowm}
+\subsubsection{Knowm Synapses}
 
 % ref: http://knowm.org/knowm/
 %
@@ -602,7 +598,7 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %
 % Comparing the scaling problem of CMOS transistors to traffic. He showed that as CMOS transistors are scaled down, and the number of electron ‘lanes’ get close to one, the devices exhibit extremely high magnitude noise due to individual electrons becoming trapped in local energy minima (pot holes) and blocking the traffic. In essence, when the transistors are large, any “stuck electrons” are easily bypassed and their contribution to the total current is minimal. However, when the devices approach the natural ‘lane width’ of an electron (about 2.7 nm if a remember correctly), a stuck electron could reduce the current by 50% or even shut down the whole device. The answer to these problems, Dr. Boahen believes (and I agree), lie in distributed fault-tolerant analog architectures inspired by the brain.
 
-\subsection{Independent Component Analysis}
+%\subsection{Independent Component Analysis}
 
 % ref: http://knowm.org/report-from-the-navy-karles-invitational-on-neuro-electronics/
 %
