--- a/report/references.bib
+++ b/report/references.bib
@@ -44,6 +44,23 @@
 }
 
 % Lucas
+@inproceedings{salakhutdinov2009deep,
+  title={Deep boltzmann machines},
+  author={Salakhutdinov, Ruslan and Hinton, Geoffrey E},
+  booktitle={International conference on artificial intelligence and statistics},
+  pages={448--455},
+  year={2009}
+}
+@article{eslami2014shape,
+  title={The shape boltzmann machine: a strong model of object shape},
+  author={Eslami, SM Ali and Heess, Nicolas and Williams, Christopher KI and Winn, John},
+  journal={International Journal of Computer Vision},
+  volume={107},
+  number={2},
+  pages={155--176},
+  year={2014},
+  publisher={Springer}
+}
 @techreport{smolensky1986information,
   title={Information processing in dynamical systems: Foundations of harmony theory},
   author={Smolensky, Paul},
