report: Add TODOs about high-level structure.

--- a/report/report.tex
+++ b/report/report.tex
@@ -20,7 +20,9 @@
 
 \section{Introduction}
 
-Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind (e.g. \textit{``If I say elephant, you say pink.''}).
+Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind (e.g. \textit{``If I say elephant, you may say pink, big or animal.''}).
+
+% TODO: Add purpose, aim, and scope of the paper.
 
 %\subsection{Hebbian Learning}
 
@@ -420,16 +422,20 @@ TODO: Extend. In 2008, HP released a paper titled \textit{The missing memristor 
 
 \section{Current Capabilities}
 
-Definitions of capacity.
+TODO: Define capabilities in terms of capacity and applications.
 
-\begin{itemize}
-\item Absolute capacity.
-\item Relative capacity.
-\item Capacity of associative memory
-\item Relative capacity of recalling process
-\end{itemize}
+%Definitions of capacity.
+%
+%\begin{itemize}
+%\item Absolute capacity.
+%\item Relative capacity.
+%\item Capacity of associative memory
+%\item Relative capacity of recalling process
+%\end{itemize}
 
 \subsection{Hopfield Network}
+
+TODO: Move applications and capabilities of Hopfields from the Model section to this section.
 
 %Wenting.
 
@@ -612,7 +618,7 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 
 \section{Conclusion}
 
-foo
+All three models make use of Hebbian learning. TODO: Extend.
 
 % === [ Research Literature ] ==================================================
 
