--- a/report/report.tex
+++ b/report/report.tex
@@ -110,6 +110,7 @@ The simplest way to minimize the energy into a local minimum of the system is to
 
 Because of this deterministic algorithm it suffers from the usual weaknesses of gradient descent algorithms, namely it gets stuck in local minima if its initial state is close to one. In order to alleviate the algorithm of this problem noise is introduced in the training. This allows the network to "jump" out of these minima into configurations of higher energy. The algorithm used for noise introduction is a variation of the "Metropolis algorithm" \cite{metropolis1953equation} that was used to study thermodynamic systems. This modified version introduces a concept of temperature to the machine. The machine then tries to reach "thermal equilibrium" during training. Meaning that the machine is allowed to run repeatedly until the global energy of the system converges to a fixed state over a temperature that is initially high and then slowly decreased over the runtime of the system. The probability of finding the system in a global state after it has reached thermal equilibrium follows a Boltzmann distribution.
 
+%TODO discuss the usage of hebbian learning in boltzmann
 %TODO write more about this temperature thing
 %TODO write more about the probabilistic features of the BM as well as the boltzmann distribution that gives the system its name.
 
