report: Extend background of memristors.

--- a/report/references.bib
+++ b/report/references.bib
@@ -290,3 +290,13 @@
   year={2008},
   publisher={Nature Publishing Group}
 }
+
+@article{memristor_hayes,
+  title={The memristor},
+  author={Hayes, Brian},
+  journal={American Scientist},
+  volume={99},
+  number={2},
+  pages={106--110},
+  year={2011}
+}
