--- a/report/sections/1_introduction.tex
+++ b/report/sections/1_introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind (e.g. \textit{``If I say elephant, you may say pink, big or animal.''}).
+Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind when presented with a given concept (e.g. \textit{``If I say elephant, you may say pink, big or animal.''}).
 
 %\subsection{Hebbian Learning}
 
