report: Add Hebbian learning section.

--- a/report/references.bib
+++ b/report/references.bib
@@ -300,3 +300,21 @@
   pages={106--110},
   year={2011}
 }
+
+@book{hebbs_rule,
+  title={The organization of behavior: A neuropsychological approach},
+  author={Hebb, Donald Olding},
+  year={1949},
+  publisher={John Wiley \& Sons}
+}
+
+@article{anti_hebbian,
+  title={Statistical constraints on synaptic plasticity},
+  author={Sejnowski, TJ},
+  journal={Journal of theoretical biology},
+  volume={69},
+  number={2},
+  pages={385--389},
+  year={1977},
+  publisher={Academic Press}
+}
