--- a/report/sections/1_introduction.tex
+++ b/report/sections/1_introduction.tex
@@ -2,18 +2,9 @@
 
 Associative memory may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memristor_conditioning}. Two broad categories of associative memory distinguish between memory recalled from partial information or cues (auto-associative memory), and memory recalled from related categories or concepts (hetero-associative memory). To give an example, auto-associative memory is used when asked to fill in the missing parts (e.g. \textit{``Which country in Europe starting with an ``F'' is known as ``the land of a thousand lakes''?''}), while hetero-associative memory is used when asked what thoughts comes to mind when presented with a given concept (e.g. \textit{``If I say elephant, you may say pink, big or animal.''}).
 
-%\subsection{Hebbian Learning}
-
-% ref: http://www.scholarpedia.org/article/Models_of_synaptic_plasticity
-%
-% (Hebb, 1949). The plasticity rule proposed by Hebb postulates that when one neuron drives the activity of another neuron, the connection between these neurons is potentiated.
-%
-% Theoretical analysis indicates that not only Hebbian like synaptic potentiation is necessary but also depression between two neurons that are not sufficiently coactive (Stent, 1973, Sejnowski 1977) Depression is necessary for several reasons, among them to prevent all synapses from saturating to their maximal values and thereby loosing their selectivity, and to prevent a positive feedback loop between network activity and synaptic weights.
-%
-% Phenomenological models are characterized by treating the process governing synaptic plasticity as a black box. The black box takes in as input a set of variables, and produces as output a change in synaptic efficacy. No explicit modeling of the biochemistry and physiology leading to synaptic plasticity is implemented.
-
 % === [ Subsections ] ==========================================================
 
-% TODO: Add purpose, aim, and scope of the paper.
+\input{sections/1_introduction/1_hebbian_learning}
 
+% TODO: Add purpose, aim, and scope of the paper.
 %\input{sections/1_introduction/1_project_aim_and_objectives}
