report: Initial work on conclusion section.

--- a/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
+++ b/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
@@ -28,9 +28,7 @@ Back in 1971, Leon Chua, often referred to as the father of non-linear circuit t
 
 % TODO: Continue from here.
 
-Several similarities have been identified between the properties of memristors and synapses, which make them interesting candidates for associative memory models.
-
-TODO: Extend. Artificial synapses experiment using memristors conducted in 2010, empirically validating the formation of associative memories using three neurons and two synapses \cite{memristor_conditioning}.
+Several similarities have been identified between the properties of memristors and synapses, which make them interesting candidates for associative memory models; as further described in section \ref{sec:current_capabilities_memory_resistor}.
 
 % ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
 %
