--- a/report/sections/3_current_capabilities.tex
+++ b/report/sections/3_current_capabilities.tex
@@ -1,6 +1,6 @@
 \section{Current Capabilities}
 
-TODO: Define capabilities in terms of capacity and applications.
+%TODO: Define capabilities in terms of capacity and applications.
 
 %Definitions of capacity.
 %
