--- a/report/sections/3_current_capabilities/3_memory_resistor.tex
+++ b/report/sections/3_current_capabilities/3_memory_resistor.tex
@@ -1,8 +1,11 @@
 \subsection{Memory Resistor}
+\label{sec:current_capabilities_memory_resistor}
 
 %Robin.
 
 Proof of concept in 2010, using 3 neurons and 2 synapses to achieve 1 associative memory formation.
+
+Artificial synapses experiment using memristors conducted in 2010, empirically validating the formation of associative memories using three neurons and two synapses \cite{memristor_conditioning}.
 
 %ref: http://www.hpl.hp.com/news/2008/apr-jun/memristor.html
 %
