--- a/report/sections/5_conclusion.tex
+++ b/report/sections/5_conclusion.tex
@@ -1,18 +1,20 @@
 \section{Conclusion}
 
-All three models make use of Hebbian learning. TODO: Extend.
+All three models make use of Hebbian learning to achieve formation of associative memories. Models such as Hopfield networks and Boltzmann machines give key insight into verifiable thories behind the formation of associative memories.
+
+%are mainly theoretical models implemented on top of commodity hardware,
 
 % === [ Research Literature ] ==================================================
 
-Preliminary list of references, cited to force inclusion within the bibliography.
+%Preliminary list of references, cited to force inclusion within the bibliography.
 
 % TODO: Add to this list throughout the project.
 
 % Wenting
-\cite{computational_abilities} \cite{optical_processing} \cite{capacity_of_nonmonotonic_model} \cite{stimulus_unitization_and_aging}
+%\cite{computational_abilities} \cite{optical_processing} \cite{capacity_of_nonmonotonic_model} \cite{stimulus_unitization_and_aging}
 
 % Lucas
 %\cite{ackley1985learning} \cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
 
 % Robin
-\cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex} \cite{ahah}
+%\cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex} \cite{ahah}
