--- a/report/sections/5_conclusion.tex
+++ b/report/sections/5_conclusion.tex
@@ -1,6 +1,8 @@
 \section{Conclusion}
 
-All three models make use of Hebbian learning to achieve formation of associative memories. Models such as Hopfield networks and Boltzmann machines give key insight into verifiable thories behind the formation of associative memories.
+All three models make use of Hebbian learning to achieve formation of associative memories. Models such as the Hopfield network and the Boltzmann Machine provide key insight into verifiable theories behind the formation of associative memories. While their theories today is nowhere near what any living brain is capable of their usage in experimentation and further studies have helped our understanding of how human like memory can be implemented in software.
+
+Since both the Hopfield network and the Boltzmann Machine are mainly theoretical models implemented on top of commodity hardware, their performance and energy usage will never get close to that of something completely designed in hardware bottom up, such as the Memory Resistor. While the memristor is still in early development it shows promising capabilities regarding these issues.
 
 %are mainly theoretical models implemented on top of commodity hardware,
 
